# sci-llm

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  ruff.toml
arxiv/: README.md  pyproject.toml  run_format.sh  run_tests.sh
arxiv/src/: config.py  doi.py  http_util.py  main.py  scratch_text.py  util.py
arxiv/src/arxiv/: __init__.py  arxiv.py  pdf.py  text.py
arxiv/src/google_util/: sheets.py
arxiv/src/pppdb/: parse_db.py
arxiv/src/scraping/: curl_impersonate.py
arxiv/tests/: conftest.py  test_arxiv.py  test_doi.py  test_http_util.py
assets/: SuperCon_Tc_Tcn_dev-set.csv
assets/supercon/: dataset.csv  properties-oxide-metal-glossary.csv  property_unit_mappings.csv  rubric.csv
docs/: VALIDATOR_GUIDE.md
examples/Tc/: README.md  combine_predictions.py  gemini_utils.py  pred.py  query_materials_with_edison.py  reprocess_out_files.py  run_edison_query.slurm
examples/biosurfactants-extraction/: README.md  create_huggingface_dataset.py  exclude_list.txt  format_tokens.py  run_harbor.sh
examples/cdw-extraction/: README.md  combine_validation_results.py  create_huggingface_dataset.py  format_targeted_properties.py  utils.py
examples/containerized-extraction/: README.md  prepare_harbor_tasks.py  push_harbor_run_to_hf.py  run_harbor.py  smoke_harbor.py
examples/extraction/: README.md  analyze_publisher_data.py  batch_pdf_to_csv.py  chatextract.py  chatextract_pdf_to_csv.py  cluster_properties.py  create_huggingface_dataset.py  extract.py  extract_supercon_properties_w_gemini.py  generate_property_unit_mappings.py  papers_1-15.csv  pred.py  pred_gemini.py  property_unit_mappings.csv  score.py  score_task.py  utils.py  validator_app.py
examples/flux-precedent-search/: README.md  prepare_precedent_tasks.py  run_precedent_search_with_llms.py  score_web_search_csv_format.py
examples/harbor/: README.md
examples/harbor-workspace/: README.md  clean_harbor_workspace.py  collect_harbor_results.py  recover_codex_results.py  score_harbor_results.py
examples/pppdb/: README.md  scrape_all_chi_entries.py  scrape_all_cloud_point_entries.py  scrape_all_tg_entries.py
examples/supercon-extraction/: ALIAS_GENERATION.md  README-albert.md  README.md  analyze_publisher_data.py  cluster_properties.py  combine_validation_results.py  compute_cohens_kappa.py  compute_cohens_kappa_resolved.py  create_huggingface_dataset.py  create_huggingface_dataset_post-2021.py  format_accuracy.py  format_property_match_tokens.py  format_targeted_properties.py  format_tokens.py  format_validation_accuracy.py  format_validation_accuracy_resolved.py  gemini_pricing.yaml  generate_embeddings.py  generate_gt_embeddings.py  generate_pred_embeddings.py  generate_property_name_matches.py  generate_property_unit_mappings.py  model_pricing.yaml  prompts.py  property_unit_mappings.csv  rename_arxiv_pdfs.py  run_batches.sh  score_pr.py  score_precision.py  score_recall.py  test_normalize_material.py  utils.py  verify_aliases.py
examples/tc-precedence-search/: README.md  SuperCon_Tc_Tcn - no NA.csv  create_dev_set.py  prepare_precedent_tasks.py
examples/tc-precedent-search/: README.md  add_token_counts.py  analyze_citation_quality.py  create_dev_set.py  create_huggingface_dataset-albert.py  extract_source_dois.py  generate_plots.py  prepare_precedent_tasks.py  rescore_results.py  run_precedent_search_with_llms.py  score_web_search_csv_format.py
scripts/: analyze_agent_precedent_flux.py  analyze_agent_precedent_tc.py  plot_accuracy_vs_tokens.py  plot_evidence.py  plot_evidence_recall_by_page.py  plot_page_distribution.py  setup_conda_environment.sh
scripts/dataset_categories_figure/: all_data_categories.csv  biosurfactant_frequency.csv  biosurfactants.csv  cdw.csv  data_clean.ipynb  supercon.csv
src/: create_dev_set.py
src/harbor-task-gen/: README.md  __init__.py  prepare_harbor_tasks.py  run_batch_harbor.py  run_harbor.py
src/llm_utils/: __init__.py  common.py  gemini.py  model_pricing.yaml  openai.py  qwen.py
src/pbench/: __init__.py  add_data_type_column.py  create_supercon_hf_dataset.py  datasets.yaml  filter_candidates.py  generate_gt_embeddings.py  generate_supercon_property_unit_mappings.py  mass_extract_properties_from_llm.py
src/pbench_containerized_eval/: README.md  __init__.py  collect_harbor_results.py  compile_harbor_run.py  harbor_entrypoint.py  harbor_patches.py  prepare_harbor_tasks.py  prepare_precedent_tasks.py  push_harbor_run_to_hf.py  run_harbor.py  run_harbor_daytona.py  run_harbor_modal.py  smoke_harbor.py
src/pbench_eval/: __init__.py  aggregate_accuracy_tokens.py  cli_utils.py  constants.py  extract_properties.py  generate_matches_cli.py  generate_pred_embeddings.py  harbor_utils.py  match.py  metrics.py  normalize_material.py  plotting_utils.py  score_evidence_cli.py  score_f1_cli.py  score_precision_cli.py  score_recall_cli.py  score_task.py  space_groups_normalized.py  stats.py  token_utils.py  utils.py  zeroshot.py
(+85 files in other folders)
