[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sci-llm"
description = ""
version = "0.0.0"
requires-python = "~=3.13.0"
authors = [
    {name="Albert Gong", email="agong@cs.cornell.edu"},
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "huggingface_hub",
    "datasets",
    "pdfplumber",
    "langchain",
    "pandas",
    "pydantic",
    "pymatgen",
    "python-dotenv",
    "pyyaml",
    "tqdm",
    "google-genai",
    "openai",
    "pymupdf",
    "scikit-learn>=1.8.0",
    "python-slugify>=8.0.4",
    "tabulate",
]

[dependency-groups]
dev = [
    "harbor>=0.1.23",
    "pre-commit",
    "ruff",
]
validator = [
    "streamlit",
    "pymupdf",
]

[project.urls]

[project.scripts]
pbench-extract = "pbench.mass_extract_properties_from_llm:main"
pbench-filter = "pbench.filter_candidates:main"
pbench-eval = "pbench_eval.zeroshot:main"
pbench-gt-embeddings = "pbench.generate_gt_embeddings:main"
pbench-pred-embeddings = "pbench_eval.generate_pred_embeddings:main"
pbench-generate-matches = "pbench_eval.generate_matches_cli:cli_main"
pbench-score-precision = "pbench_eval.score_precision_cli:cli_main"
pbench-score-recall = "pbench_eval.score_recall_cli:cli_main"
pbench-score-f1 = "pbench_eval.score_f1_cli:cli_main"
pbench-aggregate = "pbench_eval.aggregate_accuracy_tokens:cli_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pbench = ["*.yaml"]
